permissoes nas rotas ajustadas